--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -12,10 +12,11 @@ Théâtre: Théâtre
 Jeux vidéo: 'Jeux vidéo'
 Enseignement: Enseignement
 Cinéma: Cinéma
-Mot clé: 'Mot clé'
 Mot de passe: 'Mot de passe'
 Email: Email
 Firstname: Prénom
 Lastname: Nom
 Phone: Téléphone
 Répéter le mot de passe: 'Répéter le mot de passe'
+Address: Adresse
+Rechercher un évènement, un créateur...: 'Rechercher un évènement, un créateur...'
