add comment and rating

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -17,6 +17,8 @@ Email: Email
 Firstname: Prénom
 Lastname: Nom
 Phone: Téléphone
+Limite: Limite
 Répéter le mot de passe: 'Répéter le mot de passe'
 Address: Adresse
 Rechercher un évènement, un créateur...: 'Rechercher un évènement, un créateur...'
+Comment: Commentaire
