correct show event comments in no user log in

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -22,3 +22,10 @@ Répéter le mot de passe: 'Répéter le mot de passe'
 Address: Adresse
 Rechercher un évènement, un créateur...: 'Rechercher un évènement, un créateur...'
 Comment: Commentaire
+Note: Note
+0: 0
+1: 1
+2: 2
+3: 3
+4: 4
+5: 5
