add flash message if no comments or reviews

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -34,4 +34,7 @@ Football: Football
 3: 3
 4: 4
 5: 5
-exemple@exemple.com: exemple@exemple.com
+Aucun avis: 'Aucun avis'
+Aucun commentaire: 'Aucun commentaire'
+exemple@exemple.com: 'exemple@exemple.com'
+
